@@ -1,11 +1,10 @@
 package pack4;
-
-public class File2 {
+public class File1 {
 
 	public static void main(String[] args) {
-Integer a = new Integer(200);
-int i = a.intValue();
-int j = a;
+int a = 20;
+Integer i = Integer.valueOf(a);
+Integer j = a; 
 System.out.println("a=" +a+ "i=" +i+ "j=" +j);
 
 	}
